--- a/ntp.conf
+++ b/ntp.conf
@@ -29,7 +29,7 @@ pool 3.be.pool.ntp.org iburst
 
 
 # Use Ubuntu's ntp server as a fallback.
-pool ntp.ubuntu.com
+#pool ntp.ubuntu.com
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
 # details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
@@ -56,6 +56,10 @@ restrict source notrap nomodify noquery
 restrict 193.191.177.6 nomodify notrap
 restrict -6 2001:6a8:2880:a021::6 nomodify notrap
 
+#Ubuntu server
+restrict 193.191.177.130 nomodify notrap
+restrict -6 fe80::20c:29ff:fe6:8fe0 nomodify notrap
+
 # Clients from this (example!) subnet have unlimited access, but only if
 # cryptographically authenticated.
 #restrict 192.168.123.0 mask 255.255.255.0 notrust
@@ -67,5 +71,5 @@ restrict -6 2001:6a8:2880:a021::6 nomodify notrap
 
 # If you want to listen to time broadcasts on your local subnet, de-comment the
 # next lines.  Please do this only if you trust everybody on the network!
-disable auth
+#disable auth
 #broadcastclient
