Anwar server toegevoegd aan ntp.conf voor NTP opdracht

--- a/ntp.conf
+++ b/ntp.conf
@@ -60,6 +60,10 @@ restrict -6 2001:6a8:2880:a021::6 nomodify notrap
 restrict 193.191.177.130 nomodify notrap
 restrict -6 fe80::20c:29ff:fe6:8fe0 nomodify notrap
 
+#Anwar server
+restrict 193.191.177.133 nomidfy notrap
+restrict -6 fe80::cc3b:9aff:fe6c:2ca3 nomodify notrap 
+
 # Clients from this (example!) subnet have unlimited access, but only if
 # cryptographically authenticated.
 #restrict 192.168.123.0 mask 255.255.255.0 notrust
