--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -4,4 +4,10 @@
         DocumentRoot /var/www/html/www1
         ErrorLog ${APACHE_LOG_DIR}/www1error.log
         CustomLog ${APACHE_LOG_DIR}/www1access.log combined
+		<Directory "/var/www/html/www1/private">
+		AuthType Basic
+		AuthName "Password Protected Area"
+		AuthUserFile /etc/apache2/sites-available/.htpasswd
+		Require valid-user
+	</Directory>	
 </VirtualHost>
