--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-	ServerAdmin webmaster@localhost
-        ServerName secure.reda-boussabat.sb.uclllabs.be
-        DocumentRoot /var/www/html/secure
-	ErrorLog ${APACHE_LOG_DIR}/secureerror.log
-	CustomLog ${APACHE_LOG_DIR}/secureaccess.log combined
-</VirtualHost>
+		ServerAdmin webmaster@localhost
+		ServerName secure.reda-boussabat.sb.uclllabs.be
+		DocumentRoot /var/www/html/secure
+		ErrorLog ${APACHE_LOG_DIR}/secure.log 
+		CustomLog ${APACHE_LOG_DIR}/secure.log  combined
+	</VirtualHost>
