--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-	ServerAdmin webmaster@localhost
-        ServerName supersecure.reda-boussabat.sb.uclllabs.be
-        DocumentRoot /var/www/html/supersecure
-	ErrorLog ${APACHE_LOG_DIR}/supersecureerror.log
-	CustomLog ${APACHE_LOG_DIR}/supersecureaccess.log combined
-</VirtualHost>
+		ServerAdmin webmaster@localhost
+		ServerName supersecure.reda-boussabat.sb.uclllabs.be
+		DocumentRoot /var/www/html/supersecure
+		ErrorLog ${APACHE_LOG_DIR}/supersecure.log 
+		CustomLog ${APACHE_LOG_DIR}/supersecure.log  combined
+	</VirtualHost>
