HTTPS: modificatie because of SSL certification

--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -4,4 +4,7 @@
 		DocumentRoot /var/www/html/secure
 		ErrorLog ${APACHE_LOG_DIR}/secure.log 
 		CustomLog ${APACHE_LOG_DIR}/secure.log  combined
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =secure.reda-boussabat.sb.uclllabs.be
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 	</VirtualHost>
