--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -4,4 +4,7 @@
 		DocumentRoot /var/www/html/supersecure
 		ErrorLog ${APACHE_LOG_DIR}/supersecure.log 
 		CustomLog ${APACHE_LOG_DIR}/supersecure.log  combined
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =supersecure.reda-boussabat.sb.uclllabs.be
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 	</VirtualHost>
