aanpassing aan de db waarschijnlijk door script

--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -1,4 +1,5 @@
 <VirtualHost *:80>
+		Header always set Strict-Transport-Security "max-age=63072000; 
 		ServerAdmin webmaster@localhost
 		ServerName supersecure.reda-boussabat.sb.uclllabs.be
 		DocumentRoot /var/www/html/supersecure
