--- a/apache2/sites-available/supersecure-le-ssl.conf
+++ b/apache2/sites-available/supersecure-le-ssl.conf
@@ -1,5 +1,6 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
+		Header always set Strict-Transport-Security "max-age=63072000;  
 		ServerAdmin webmaster@localhost
 		ServerName supersecure.reda-boussabat.sb.uclllabs.be
 		DocumentRoot /var/www/html/supersecure
