IMAP dovecot conf file aangepast

--- a/dovecot/conf.d/10-mail.conf
+++ b/dovecot/conf.d/10-mail.conf
@@ -27,8 +27,16 @@
 #
 # <doc/wiki/MailLocation.txt>
 #
-mail_location = maildir:/var/vmail/%d/%n/
-
+#mail_location = maildir:/var/vmail/%d/%n/
+mail_location = maildir:~ #update mail_location
+passdb {
+  driver = passwd-file
+  args = username_format=%u /etc/dovecot/users
+}
+userdb {
+  driver = static
+  args = uid=vmail gid=vmail home=/var/mail/vhosts/%d/%n
+}
 # If you need to set multiple mailbox locations or want to change default
 # namespace settings, you can do it by defining namespace sections.
 #
